--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       max-parallel: 1 # Do not risk building the same derivation twice.
       matrix:
-        channel: [unstable-small, unstable]
+        channel: [unstable]
         device: '${{ fromJSON(needs.detect-devices.outputs.devices) }}'
 
     steps:
@@ -30,7 +30,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v8
       - uses: cachix/cachix-action@v15
         with:
-          name: hacker1024-jovian
+          name: kabtop
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - uses: jlumbroso/free-disk-space@main
         with:
